--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,10 @@
     "activeTab",
     "scripting"
   ],
-  "background": {
-    "service_worker": "background.js"
+  "commands": {
+    "_execute_action": {
+      "suggested_key": "Option+Shift+W",
+      "description": "Turn on webcam"
+    }
   }
 }
