--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,15 +6,22 @@
   "action": {
     "default_popup": "index.html"
   },
+  "icons": {
+    "16": "camera3.png",
+    "48": "camera3.png",
+    "128": "camera3.png"
+  },
   "permissions": [
     "tabs",
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "commands": {
     "_execute_action": {
-      "suggested_key": "Option+Shift+W",
-      "description": "Turn on webcam"
+      "suggested_key": {
+        "default": "Alt+Shift+W"
+      }
     }
   }
 }
